maintaing board state in board component

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@ ol, ul {
 
 .status {
     margin-bottom: 10px;
+    text-align: center;
+    font-size: 30px;
+    padding-bottom: 50px;
 }
 
 .square {
